--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 .text-example
 {
-    font-size:larger;
+    font-size:normal;
     font-family: Verdana;
     text-transform: capitalize;
     text-decoration: underline;
