--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,8 @@
     background-color: lightpink;
     border-style: dashed;
 }
+.top-left-link {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
