--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     background-color: lightpink;
     border-style: dashed;
 }
-.top-left-link {
+.top-right-link {
     position: absolute;
     top: 10px;
     left: 10px;
